# cpp-python-cmake

./: .gitignore  CMakeLists.txt  main.py
cpp/: CMakeLists.txt  CppProject.cpp  CppProject.hpp  main.cpp
python/: binding.cpp  pyproject.toml  setup.py
python/src/PyCppProject/: __init__.py  core.py
