[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "PyCppProject"
version = "0.0.1"
authors = [
  { name="Alexandre Halopé", email="alexandrehalope@yahoo.fr" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "http://www.twitter.com"
"Bug Tracker" = "http://www.twitter.com"